fixtures/gate/reject/negative_datatype.oath
(data D [] (C (-> D D)))
